--- a/lldb/packages/Python/lldbsuite/test/macosx/universal/Makefile
+++ b/lldb/packages/Python/lldbsuite/test/macosx/universal/Makefile
@@ -18,11 +18,12 @@ testit.i386: testit.i386.o
 testit.x86_64: testit.x86_64.o
 	$(CC) -arch x86_64 -o testit.x86_64 testit.x86_64.o
 
+# FIXME: CFLAGS_NO_ARCH isn't defined anywhere, it seems.
 testit.i386.o: main.c
-	$(CC) $(CFLAGS_NO_ARCH) -arch i386 -c -o testit.i386.o main.c
+	$(CC) $(CFLAGS_NO_ARCH) -g -arch i386 -c -o testit.i386.o main.c
 
 testit.x86_64.o: main.c
-	$(CC) $(CFLAGS_NO_ARCH) -arch x86_64 -c -o testit.x86_64.o main.c
+	$(CC) $(CFLAGS_NO_ARCH) -g -arch x86_64 -c -o testit.x86_64.o main.c
 
 clean::
 	rm -rf $(wildcard testit* *~)
