Bring Makefile in sync with llvm.org
apple-llvm-split-commit: 08adce4a1cb471298f8a625120e42680a0956d2b
apple-llvm-split-dir: lldb/

--- a/lldb/packages/Python/lldbsuite/test/macosx/universal/Makefile
+++ b/lldb/packages/Python/lldbsuite/test/macosx/universal/Makefile
@@ -1,14 +1,5 @@
 CC ?= clang
 
-all: testit
-
-LEVEL = ../../make
-
-C_SOURCES := main.c
-
-include $(LEVEL)/Makefile.rules
-
-
 testit: testit.i386 testit.x86_64
 	lipo -create -o testit testit.i386 testit.x86_64
 
@@ -18,12 +9,11 @@ testit.i386: testit.i386.o
 testit.x86_64: testit.x86_64.o
 	$(CC) -arch x86_64 -o testit.x86_64 testit.x86_64.o
 
-# FIXME: CFLAGS_NO_ARCH isn't defined anywhere, it seems.
 testit.i386.o: main.c
-	$(CC) $(CFLAGS_NO_ARCH) -g -arch i386 -c -o testit.i386.o main.c
+	$(CC) -g -O0 -arch i386 -c -o testit.i386.o main.c
 
 testit.x86_64.o: main.c
-	$(CC) $(CFLAGS_NO_ARCH) -g -arch x86_64 -c -o testit.x86_64.o main.c
+	$(CC) -g -O0 -arch x86_64 -c -o testit.x86_64.o main.c
 
-clean::
+clean:
 	rm -rf $(wildcard testit* *~)
