[cmake] Reintroduce a minimal version of SKIP_DEBUGSERVER (r309026)
r309026 was merged into stable and then partially reverted in
aa165c80781a9948dc18b28e303d7cc161911cb2. This has left us in a bad
state w.r.t handling of the SKIP_DEBUGSERVER flag.

It's too risky to cherry-pick r309026, so this introduces a minimal
version of the flag (enough to fix the cmake build).

apple-llvm-split-commit: ebe52abf3401998d4027fa2dae58d95786b8c0e9
apple-llvm-split-dir: lldb/

--- a/lldb/tools/debugserver/source/CMakeLists.txt
+++ b/lldb/tools/debugserver/source/CMakeLists.txt
@@ -89,33 +89,35 @@ set(lldbDebugserverCommonSources
   ${generated_mach_interfaces}
   ${DEBUGSERVER_VERS_GENERATED_FILE})
 
-add_library(lldbDebugserverCommon ${lldbDebugserverCommonSources})
-
-
-if (APPLE)
-  if(IOS)
-    find_library(COCOA_LIBRARY UIKit)
-    target_link_libraries(lldbDebugserverCommon INTERFACE ${COCOA_LIBRARY} ${CORE_FOUNDATION_LIBRARY} ${FOUNDATION_LIBRARY})
-  else()
-    find_library(COCOA_LIBRARY Cocoa)
-    target_link_libraries(lldbDebugserverCommon INTERFACE ${COCOA_LIBRARY})
+if (NOT SKIP_DEBUGSERVER)
+  add_library(lldbDebugserverCommon ${lldbDebugserverCommonSources})
+  
+  
+  if (APPLE)
+    if(IOS)
+      find_library(COCOA_LIBRARY UIKit)
+      target_link_libraries(lldbDebugserverCommon INTERFACE ${COCOA_LIBRARY} ${CORE_FOUNDATION_LIBRARY} ${FOUNDATION_LIBRARY})
+    else()
+      find_library(COCOA_LIBRARY Cocoa)
+      target_link_libraries(lldbDebugserverCommon INTERFACE ${COCOA_LIBRARY})
+    endif()
   endif()
+  
+  target_link_libraries(lldbDebugserverCommon
+                        INTERFACE ${COCOA_LIBRARY}
+                        ${CORE_FOUNDATION_LIBRARY}
+                        ${FOUNDATION_LIBRARY}
+                        lldbDebugserverArchSupport
+                        lldbDebugserverDarwin_DarwinLog)
+  
+  set(LLVM_OPTIONAL_SOURCES ${lldbDebugserverCommonSources})
+  add_lldb_tool(debugserver INCLUDE_IN_FRAMEWORK
+    debugserver.cpp
+  
+    LINK_LIBS
+      lldbDebugserverCommon
+    )
 endif()
-
-target_link_libraries(lldbDebugserverCommon
-                      INTERFACE ${COCOA_LIBRARY}
-                      ${CORE_FOUNDATION_LIBRARY}
-                      ${FOUNDATION_LIBRARY}
-                      lldbDebugserverArchSupport
-                      lldbDebugserverDarwin_DarwinLog)
-
-set(LLVM_OPTIONAL_SOURCES ${lldbDebugserverCommonSources})
-add_lldb_tool(debugserver INCLUDE_IN_FRAMEWORK
-  debugserver.cpp
-
-  LINK_LIBS
-    lldbDebugserverCommon
-  )
 
 set(LLDB_CODESIGN_IDENTITY "lldb_codesign"
   CACHE STRING "Identity used for code signing. Set to empty string to skip the signing step.")
