--- a/lldb/packages/Python/lldbsuite/test/lang/swift/expression/exclusivity_suppression/Makefile
+++ b/lldb/packages/Python/lldbsuite/test/lang/swift/expression/exclusivity_suppression/Makefile
@@ -1,11 +1,4 @@
 LEVEL = ../../../../make
-
+SWIFT_SOURCES :=main.swift
+SWIFTFLAGS := -enforce-exclusivity=checked
 include $(LEVEL)/Makefile.rules
-
-everything: main
-
-main: main.swift
-	$(SWIFTCC) -g -Onone -enforce-exclusivity=checked -o main main.swift
-
-cleanup:
-	rm -rf main *.dSYM lib*.dylib *~
